<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background_3">
    <RelativeLayout
        android:id="@+id/activity_disclaimer_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_background_1">
        <RelativeLayout
            android:id="@+id/activity_disclaimer_title_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_top_layout_height">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="gravity"
                android:gravity="center"
                android:text="@string/disclaimer_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_3"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/disclaimer_close"
                android:layout_width="@dimen/main_activity_top_layout_height"
                android:layout_height="@dimen/main_activity_top_layout_height"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/common_margin_vertical"
                android:src="@drawable/icon_back_arrow"/>
        </RelativeLayout>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/common_margin_vertical"
        android:textAlignment="gravity"
        android:gravity="center"
        android:text="@string/official_website"
        android:textColor="@color/music_list_item_text_color_gray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_disclaimer_top"
        android:layout_above="@id/logo">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5"
                android:text="@string/disclaimer_content"
                android:textColor="@color/action_sheet_3d_voice_progress_text_color"
                android:textSize="@dimen/text_size_2"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
