<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background_3">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/main_app_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_app_title_height"
        android:layout_alignParentTop="true"
        android:textAlignment="gravity"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white_70_per"
        android:textSize="@dimen/main_app_title_text_size"/>
    <RelativeLayout
        android:id="@+id/entry_chat_room_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_app_title"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="@color/theme_background_4">
        <RelativeLayout
            android:id="@+id/chat_room_card_button_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chat_room_button_layout_height"
            android:layout_alignParentBottom="true">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/chat_room_scene_btn"
                android:layout_width="@dimen/main_entry_button_width"
                android:layout_height="@dimen/main_entry_button_height"
                android:background="@drawable/main_home_enter_btn_bg"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_marginTop="@dimen/main_entry_card_margin"
                android:layout_marginBottom="@dimen/main_entry_card_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/main_app_title_text_size"
                android:text="@string/main_start_chat"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/chat_room_card_button_layout"
            android:background="@drawable/chat_room_card_background">
            <io.agora.agoravoice.ui.views.RoomIntroImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/scene_category_card_chat_room"
                android:scaleType="fitCenter"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_navigation_card_title_margin"
                android:layout_marginStart="@dimen/main_navigation_card_title_margin"
                android:textSize="@dimen/text_size_4"
                android:text="@string/scene_type_chat_room"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
