<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background_3">
    <RelativeLayout
        android:id="@+id/name_edit_top_color_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_background_4">
        <RelativeLayout
            android:id="@+id/avatar_edit_top_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_profile_edit_top_layout_height">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/main_profile_edit_cancel"
                android:layout_width="@dimen/profile_edit_top_button_width"
                android:layout_height="@dimen/profile_edit_top_button_height"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/common_margin_horizontal"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textSize="@dimen/text_size_1_1"
                android:textColor="@color/edit_cancel_btn_text_color"
                android:text="@string/text_cancel"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/main_profile_edit_confirm"
                android:layout_width="@dimen/profile_edit_top_button_width"
                android:layout_height="@dimen/profile_edit_top_button_height"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/common_margin_horizontal"
                android:layout_centerVertical="true"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textSize="@dimen/text_size_1_1"
                android:text="@string/text_done"
                android:textColor="@color/edit_confirm_btn_text_color"
                android:background="@drawable/edit_confirm_btn_bg"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/main_profile_edit_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textSize="@dimen/text_size_2"
                android:text="@string/profile_edit_nickname_title"
                android:textColor="@android:color/white"/>
        </RelativeLayout>
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/main_profile_nickname_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_profile_nickname_edit_height"
        android:layout_below="@id/name_edit_top_color_layout"
        android:layout_marginTop="@dimen/margin_4"
        android:paddingStart="@dimen/margin_5"
        android:paddingEnd="@dimen/margin_5"
        android:textAlignment="gravity"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_2"
        android:textColor="@android:color/white"
        android:background="@color/theme_background_4"/>
</RelativeLayout>
