<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/action_sheet_3d_voice_height"
    android:background="@drawable/action_sheet_layout">
    <RelativeLayout
        android:id="@+id/action_sheet_3d_voice_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/action_sheet_3d_voice_back"
            android:layout_width="@dimen/action_sheet_title_height"
            android:layout_height="@dimen/action_sheet_title_height"
            android:layout_marginStart="@dimen/common_margin_horizontal"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_back_arrow"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/action_sheet_3d_voice_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_sheet_title_height"
            android:textAlignment="gravity"
            android:gravity="center"
            android:text="@string/action_sheet_3d_voice_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_2"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/action_sheet_electronic_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/common_margin_horizontal"
            android:layout_centerVertical="true"
            android:src="@drawable/switch_icon"
            android:scaleType="fitXY"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_sheet_3d_voice_title_layout">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/action_sheet_3d_voice_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_sheet_3d_voice_description_height"
            android:layout_alignParentTop="true"
            android:textAlignment="gravity"
            android:gravity="center"
            android:layout_marginStart="@dimen/common_margin_horizontal"
            android:layout_marginEnd="@dimen/common_margin_horizontal"
            android:text="@string/action_sheet_3d_voice_description"
            android:textColor="@color/action_sheet_3d_voice_description_text_color"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/action_sheet_3d_voice_description">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/action_sheet_3d_voice_text_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/common_margin_horizontal"
                android:layout_alignTop="@id/action_sheet_3d_voice_speed_bar"
                android:layout_alignBottom="@id/action_sheet_3d_voice_speed_bar"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:text="@string/action_sheet_3d_voice_text_min"
                android:textColor="@color/action_sheet_3d_voice_progress_text_color"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/action_sheet_3d_voice_text_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/common_margin_horizontal"
                android:layout_alignTop="@id/action_sheet_3d_voice_speed_bar"
                android:layout_alignBottom="@id/action_sheet_3d_voice_speed_bar"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:text="@string/action_sheet_3d_voice_text_max"
                android:textColor="@color/action_sheet_3d_voice_progress_text_color"/>
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/action_sheet_3d_voice_speed_bar"
                style="@style/action_sheet_music_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_sheet_music_volume_layout_height"
                android:layout_marginEnd="@dimen/common_margin_vertical"
                android:layout_toEndOf="@id/action_sheet_3d_voice_text_min"
                android:layout_toStartOf="@id/action_sheet_3d_voice_text_max" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
