<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/action_sheet_layout">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/action_sheet_voice_beauty_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_sheet_title_height"
        android:textAlignment="gravity"
        android:gravity="center"
        android:text="@string/action_sheet_voice_beauty_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_2"/>

    <RelativeLayout
        android:id="@+id/action_sheet_sound_effect_type_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_sheet_title_height"
        android:layout_below="@id/action_sheet_voice_beauty_title"
        android:background="@color/theme_background_3">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">
            <RelativeLayout
                android:id="@+id/action_sheet_voice_beauty_layout_1"
                android:layout_width="@dimen/action_sheet_voice_beauty_type_width"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/action_sheet_sound_effect_type_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="gravity"
                    android:gravity="center"
                    android:text="@string/action_sheet_voice_beauty_type_title_1"/>
                <View
                    android:id="@+id/action_sheet_sound_effect_type_item_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/border_2"
                    android:background="@color/theme_blue_1"
                    android:layout_alignParentBottom="true"
                    android:visibility="gone"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/action_sheet_voice_beauty_layout_2"
                android:layout_width="@dimen/action_sheet_voice_beauty_type_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/action_sheet_voice_beauty_type_margin">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/action_sheet_voice_beauty_type_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="gravity"
                    android:gravity="center"
                    android:text="@string/action_sheet_voice_beauty_type_title_2"/>
                <View
                    android:id="@+id/action_sheet_voice_beauty_type_indicator_2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/border_2"
                    android:background="@color/theme_blue_1"
                    android:layout_alignParentBottom="true"
                    android:visibility="gone"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/action_sheet_voice_beauty_layout_3"
                android:layout_width="@dimen/action_sheet_voice_beauty_type_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/action_sheet_voice_beauty_type_margin">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/action_sheet_voice_beauty_type_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="gravity"
                    android:gravity="center"
                    android:text="@string/action_sheet_voice_beauty_type_title_3"/>
                <View
                    android:id="@+id/action_sheet_voice_beauty_type_indicator_3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/border_2"
                    android:background="@color/theme_blue_1"
                    android:layout_alignParentBottom="true"
                    android:visibility="gone"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/action_sheet_voice_beauty_recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_sheet_voice_beauty_recycler_height"
        android:layout_below="@id/action_sheet_sound_effect_type_layout"
        android:layout_margin="@dimen/common_margin_vertical"
        android:overScrollMode="never"/>
</RelativeLayout>
